# rust-visualizer

./: .gitignore  Cargo.toml
src/: audio.rs  fft.rs  main.rs  renderer.rs  shader.wgsl
